fixed some bugs with api key adding/deleting; added loading and error icons; set a timer to api fetch calls to abort if it takes too long

--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -39,3 +39,39 @@ align-items: center;
     width: 25px;
     height: 25px;
 }
+
+.loadingDiv{
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loadingDiv img{
+    width: 80px;
+    height: 80px;
+    animation: rotation 1s infinite linear;
+}
+@keyframes rotation {
+    from{
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
+}
+.loadingDiv h2{
+    opacity: 50%;
+}
+.errorDiv {
+    padding-top: 80px;
+    max-width: fit-content;
+    margin: 0 auto;
+
+}
+.errorDiv img{
+    display: block;
+    margin: 0 auto;
+    width: 80px;
+    height: 80px;
+}
